<resources>
    <string name="app_name">Fasheonic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_here">Search here</string>

    <string name="followbtn">Follow</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="z">Open navigation drawer</string>
    <string name="r">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_uploadorder">Upload Order</string>
    <string name="menu_myorderbids">My Order Bids</string>
    <string name="menu_mywishlist">My Wishlist</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_payment">Payment Method</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="followers">Followers</string>
</resources>
